--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
+    id 'com.huawei.agconnect'
 }
+
+
 
 android {
     compileSdk 31
@@ -17,11 +20,33 @@ android {
 
     buildTypes {
         release {
+            packagingOptions  {
+                // If the CPU architecture is ARMv7 or ARMv8, add the following configuration:
+                doNotStrip "*/arm64-v8a/libucs-credential.so"
+                doNotStrip "*/armeabi-v7a/libucs-credential.so"
+                // If the CPU architecture is x86, add the following configuration:
+                doNotStrip "*/x86/libucs-credential.so"
+                doNotStrip "*/x86_64/libucs-credential.so"
+            }
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            packagingOptions  {
+                // If the CPU architecture is ARMv7 or ARMv8, add the following configuration:
+                doNotStrip "*/arm64-v8a/libucs-credential.so"
+                doNotStrip "*/armeabi-v7a/libucs-credential.so"
+                // If the CPU architecture is x86, add the following configuration:
+                doNotStrip "*/x86/libucs-credential.so"
+                doNotStrip "*/x86_64/libucs-credential.so"
+            }
+        }
+
     }
-    compileOptions {
+
+
+        compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -35,4 +60,6 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.huawei.agconnect:agconnect-apms:1.5.2.300'
+    implementation "com.huawei.agconnect:agconnect-auth:1.6.1.300"
 }
