--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation "com.huawei.agconnect:agconnect-auth:1.6.1.300"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation "com.huawei.agconnect:agconnect-storage:1.3.1.200"
+    implementation platform('com.google.firebase:firebase-bom:29.0.1')
+    implementation 'com.google.firebase:firebase-storage'
     implementation 'com.google.firebase:firebase-database:19.7.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
