--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Foody">
-
+        <activity
+            android:name=".activity.ViewImage"
+            android:exported="true" />
         <activity
             android:name=".activity.RecipeDetailActivity"
             android:exported="true"
@@ -43,7 +45,7 @@
         <activity
             android:name=".activity.ProfileActivity"
             android:label="@string/title_activity_profile"
-            android:theme="@style/AppTheme.ProfileTheme"></activity>
+            android:theme="@style/AppTheme.ProfileTheme" />
         <activity
             android:name=".activity.LoginActivity"
             android:exported="true">
